feat: Agrega colas de trabajo con AMQP/RabbitMQ
